# project-crm

./: .gitignore  README.md  logfile  pyproject.toml
crm/: db.sqlite3
crm/api/: admin.py  models.py  serializers.py  urls.py  views.py
crm/api/migrations/: 0001_initial.py
crm/api/settingsDir/: base.py
crm/crm/: settings.py  urls.py
frontend/: package.json
frontend/src/: App.js
