[tool.poetry]
name = "crm-project"
version = "0.1.0"
description = "Pet project for mastering Python"
authors = ["Gaurang"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
